# deepseek_client

./: .gitignore  MANIFEST.in  README.md  config.yaml  main.py  pyproject.toml  r1_model.py  setup.py
app/: main.py
core/: auth.py  chat.py  config.py
deepseek/: main.py
deepseek/core/: auth.py  chat.py  config.py  tts.py
deepseek/keys/: encryptor.py
keys/: encrypt_secrets.py  encryptor.py
